Employee info saved in database

--- a/TrashCollectorProject/Views/Customers/Edit.cshtml
+++ b/TrashCollectorProject/Views/Customers/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model TrashCollectorProject.Models.Customer
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Edit Customer";
 }
 
 <h2>Edit</h2>
