--- a/TrashCollectorProject/Views/Customers/Create.cshtml
+++ b/TrashCollectorProject/Views/Customers/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model TrashCollectorProject.Models.Customer
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Create Customer";
 }
 
 <h2>Create</h2>
