--- a/TrashCollectorProject/Views/Customers/Details.cshtml
+++ b/TrashCollectorProject/Views/Customers/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model TrashCollectorProject.Models.Customer
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Customer Details";
 }
 
 <h2>Details</h2>
