added vacation option and removal fee for customer

--- a/TrashCollectorProject/Views/Customers/Create.cshtml
+++ b/TrashCollectorProject/Views/Customers/Create.cshtml
@@ -68,7 +68,8 @@
                  new SelectListItem() {Text="Thursday", Value="Thursday" },
                  new SelectListItem() {Text="Friday", Value="Friday" },
                  new SelectListItem() {Text="Saturday", Value="Saturday" },
-                 new SelectListItem() {Text="Sunday", Value="Sunday" }
+                 new SelectListItem() {Text="Sunday", Value="Sunday" },
+                 new SelectListItem() {Text="Vacation", Value="Vacation" }
             },
              new { @class = "form-control" })
 
