--- a/TrashCollectorProject/Views/Customers/Details.cshtml
+++ b/TrashCollectorProject/Views/Customers/Details.cshtml
@@ -58,6 +58,14 @@
             @Html.DisplayFor(model => model.PickupDay)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.removalFee)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.removalFee)
+        </dd>
+
     </dl>
 </div>
 <p>
