--- a/TrashCollectorProject/Views/Customers/Index.cshtml
+++ b/TrashCollectorProject/Views/Customers/Index.cshtml
@@ -29,6 +29,9 @@
         <th>
             @Html.DisplayNameFor(model => model.PickupDay)
         </th>
+        <th>
+            @Html.DisplayNameFor(model => model.removalFee)
+        </th>
         <th></th>
     </tr>
 
@@ -51,6 +54,9 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.PickupDay)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.removalFee)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.CustomerId }) |
