--- a/TrashCollectorProject/Views/Customers/Index.cshtml
+++ b/TrashCollectorProject/Views/Customers/Index.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Customer";
 }
 
-<h2>Customer</h2>
+<h2>Customer Page</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
