--- a/TrashCollectorProject/Views/Employees/Edit.cshtml
+++ b/TrashCollectorProject/Views/Employees/Edit.cshtml
@@ -1,10 +1,10 @@
 ﻿@model TrashCollectorProject.Models.Employee
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Edit Employee";
 }
 
-<h2>Edit</h2>
+<h2>Edit Employee</h2>
 
 @using (Html.BeginForm())
 {
