--- a/TrashCollectorProject/Views/Employees/Index.cshtml
+++ b/TrashCollectorProject/Views/Employees/Index.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Employee";
 }
 
-<h2>Index</h2>
+<h2>Employee Page</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
@@ -22,6 +22,9 @@
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Zip)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.verifyRoute)
         </th>
         <th></th>
     </tr>
